--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- 
+        レスポンシブの設定
+        ・viewportの設定
+    -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--このサイトは何か　説明する場所-->
     <meta name="description" content="テック太郎の紹介">
@@ -34,7 +38,7 @@
         <!--
             profileの箱
         -->
-        <div class="box proile">
+        <div class="box-profile">
             <h2 class="sub-title">
                 <span class="color-green">P</span>rofile
             </h2>
